import javax.swing.*;
import java.awt.*;
import java.awt.event.ActionEvent;
import java.awt.event.ActionListener;
import java.awt.event.MouseAdapter;
import java.awt.event.MouseEvent;
import java.util.ArrayList;
import java.util.Comparator;
import java.net.URI;

public class BuecherAusgabe extends JFrame {

    private ArrayList<Buch> buchListe;
    private ArrayList<Buch> gefilterteListe = new ArrayList<>();
    private JTextArea jtAreaListe;
    private JPanel panelListe;
    private JComboBox<String> cBFilter;
    private JCheckBox cBAlphabetisch;
    private JLabel jlabelLink, Icon;


    //Konstruktor: bekommt Bücherliste übergeben
    public BuecherAusgabe(ArrayList<Buch> buchListe) {
        this.buchListe = buchListe;

        initWindow();
        initComponents();
        initListeners();
        initLink();

        zeigeListeAn("Alle"); // Anfangsanzeige
        setVisible(true);
    }

// Fenster Struktur
private void initWindow() {
    setTitle("Booktopia -Bücherliste");
    setDefaultCloseOperation(JFrame.DISPOSE_ON_CLOSE);//nur dieses Fenster wird geschlossen, Rest vom Programm läuft weiter
    setSize(900, 600);
    setResizable(true);
}

private void initComponents() {
        setContentPane(panelListe);
    }

private void initListeners(){

        zeigeListeAn("Alle"); // Methodenaufruf: Liste in jtArea anzeigen
        filterIstAktiv();

        cBFilter.addActionListener(new ActionListener() {
            @Override
            public void actionPerformed(ActionEvent e) {
                String filter = cBFilter.getSelectedItem().toString();
                zeigeListeAn(filter);
                filterIstAktiv(); // Hier schon Checkbox aktivieren/ deaktivieren (je nach Filter)
            }
        });

        cBAlphabetisch.addActionListener(new ActionListener() {
            @Override
            public void actionPerformed(ActionEvent e) {
                if (cBAlphabetisch.isSelected()) {
                    if (filterIstAktiv()) {
                        gefilterteListe.sort(Comparator.comparing(buch -> buch.getTitel().toLowerCase())); //durch toLowerCase() wird nicht auf Groß- und Kleinschreibung geachtet (ChatGPT)

                        String text = "";
                        for (Buch buch : gefilterteListe) {
                            text = text + buch.toString() + "\n"; // Jede Buchinfo anhängen
                        }
                        jtAreaListe.setText(text); // fertigen Text in jtArea einsetzen
                        gefilterteListe.clear();
                    }
                } else {
                    zeigeListeAn(cBFilter.getSelectedItem().toString());
                }
            }
        });

}
        /* Um Hyperlink hinzufügen: JLabel component muss erweitert + mouse listener erzeugt werden
        --> Quelle: How to create hyperlink with JLabel in Java Swing (by Nam Ha Minh, CodeJava.net)*/
private void initLink(){
        jlabelLink.setText("<html><a href=''>Hier klicken</a></html>");
        jlabelLink.setCursor(new Cursor(Cursor.HAND_CURSOR)); // Maus zeigt Hand an
        jlabelLink.addMouseListener(new MouseAdapter() {
            @Override
            public void mouseClicked(MouseEvent e) {
                try {
                    Desktop.getDesktop().browse(new URI("https://www.thalia.de"));
                } catch (Exception ex) {
                    ex.printStackTrace(); // Fehlermeldung falls z.B kein Browser installiert ist/ URI ungültig ist
                }
            }
        });
}

    private void zeigeListeAn(String filter) {
    gefilterteListe.clear(); // leere, damit keine alten Einträge drin bleiben
    String text = ""; // Platzhalter, hier wird gesamter Text im Filter für Liste zusammengesetzt

        if (filter.contains("Alle")) {  //Filtert ob "Alle" in der ComboBox ausgewählt ist
            for (Buch buch : buchListe) {
                text += buch + "\n"; // Jede Buch Info anhängen
            }
            jtAreaListe.setText(text); // fertigen Text in jtArea einsetzen
            return;
        }

        if (filter.contains("3 oder mehr Sterne")) {  //Filtert ob "3 oder mehr Sterne" in der ComboBox ausgewählt ist
            for (Buch buch : buchListe) {
                if (buch.getBewertung() >= 3) {
                    gefilterteListe.add(buch);
                    text += buch + "\n";

                }
            }
            jtAreaListe.setText(text);
            return;
        }

        if (filter.contains("4 oder mehr Sterne")) {  //Filtert ob "4 oder mehr Sterne" in der ComboBox ausgewählt ist
            for (Buch buch : buchListe) {
                if (buch.getBewertung() >= 4) {
                    gefilterteListe.add(buch);
                     text += buch + "\n";
                }
            }
            jtAreaListe.setText(text);
            return;
        }

        if (filter.contains("5 Sterne")) {  //Filtert ob "5 Sterne" in der ComboBox ausgewählt ist
            for (Buch buch : buchListe) {
                if (buch.getBewertung() >= 5) {
                    gefilterteListe.add(buch);
                    text += buch + "\n";
                }
            }
            jtAreaListe.setText(text);
            return;
        }


        for (Buch buch : buchListe) {  //nachdem schon geprüft wurde ob "Alle" oder eine Bewertung in der ComboBox ausgewählt wurde, jetzt nur noch Genres möglich
            if (buch.getGenre().equals(filter)) {
                gefilterteListe.add(buch);//Filtern nach Genre
                text += buch + "\n";

            }
        }
        jtAreaListe.setText(text);
    }

    private boolean filterIstAktiv() {
        String filter = cBFilter.getSelectedItem().toString();
        if (!filter.equals("Alle")) {
            cBAlphabetisch.setEnabled(true);
            return true;
        }
        cBAlphabetisch.setSelected(false);
        cBAlphabetisch.setEnabled(false);
        return false;
    }

}

